crates/carta/tests/snapshots/golden_writer__ipynb__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| l   |   r |  c  | d   |\n",
    "|:----|----:|:---:|-----|\n",
    "| 1   |   2 |  3  | 4   |"
   ],
   "id": "45437098-8bfb-4300-b11d-e1a54a7052b0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
