crates/carta/tests/snapshots/golden_writer__ipynb__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| h1  | h2  |\n",
    "|-----|-----|\n",
    "| a   | b   |\n",
    "\n",
    "Captioned and attributed {#tbl .fancy key=\"value\"}"
   ],
   "id": "da87023b-54bb-45f2-9b5f-9fcef31eef14"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
