crates/carta/tests/snapshots/golden_writer__ipynb__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| left | right |\n",
    "|------|-------|\n",
    "| x    |       |\n",
    "|      | y     |"
   ],
   "id": "7f4ba86d-d32b-42ea-a914-41cad380dbe8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
