crates/carta/tests/snapshots/golden_writer__ipynb__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "<table>\n",
    "<thead>\n",
    "<tr>\n",
    "<th>product</th>\n",
    "<th>note</th>\n",
    "</tr>\n",
    "</thead>\n",
    "<tbody>\n",
    "<tr>\n",
    "<td>multi<br />\n",
    "line cell</td>\n",
    "<td>plain</td>\n",
    "</tr>\n",
    "</tbody>\n",
    "</table>"
   ],
   "id": "d00231f3-5785-450f-bc03-faee14e730b6"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
